# gitbrowser

./: .gitignore  0001-Remove-enum34-dependency.patch  README.md  flake.nix  pyproject.toml
gitbrowser/: __main__.py  test_pagination.py
