[tool.poetry]
name = "gitbrowser"
version = "0.1.0"
description = ""
authors = ["Simon Jagoe <simon@simonjagoe.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.scripts]
gitbrowser = 'gitbrowser.__main__:main'

[tool.poetry.group.dev.dependencies]
haas = "^0.9.0"
coverage = "^7.4.3"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
